Fixed overlapping header issue

--- a/snappr/src/main/webapp/frontend/css/header.css
+++ b/snappr/src/main/webapp/frontend/css/header.css
@@ -11,6 +11,7 @@ body{
     width: calc(100% - 200px);
     padding: 15px 0px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.04);
+    z-index: 40;
 }
 
 .header{
